Modified CSS for login page

--- a/my-dream-app/src/app/Login/login.component.html
+++ b/my-dream-app/src/app/Login/login.component.html
@@ -12,9 +12,12 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-2"><button type="submit" class="btn btn-primary">Submit</button></div>
-                    <div class="col-sm-3"><a href="#">Forget Password</a></div>
-
+                    <div class="col-sm-3 mt-8"><a href="#">Forget Password</a></div>
                 </div>
+                <!-- <div class="row form-group">
+                    <label for="exampleInputEmail1">Enter Email Address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Enter email address">
+                </div> -->
             </form>
         </div>
     </div>
