--- a/my-dream-app/src/app/Login/login.component.html
+++ b/my-dream-app/src/app/Login/login.component.html
@@ -1,24 +1,34 @@
 <div class="col-sm-12 text-left">
     <div class="row">
         <div class="col-sm-4 card-style-1">
-            <form>
+            <div *ngIf="showLoginDiv"> 
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">User Name</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2"><button type="submit" class="btn btn-primary">Submit</button></div>
+                        <div class="col-sm-3 mt-8"><a href="#" (click)="onClickForgetPassword()">Forget Password</a></div>
+                    </div>
+
+                </form>
+            </div>
+            <div  *ngIf="showForgetPasswordDiv">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">User Name</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="row">
-                    <div class="col-sm-2"><button type="submit" class="btn btn-primary">Submit</button></div>
-                    <div class="col-sm-3 mt-8"><a href="#">Forget Password</a></div>
-                </div>
-                <!-- <div class="row form-group">
                     <label for="exampleInputEmail1">Enter Email Address</label>
                     <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Enter email address">
-                </div> -->
-            </form>
+                </div>
+                <div class="row">
+                    <div class="col-sm-2"><button type="submit" class="btn btn-primary">Send</button></div>
+                    <div class="col-sm-3"><button type="submit" class="btn btn-primary" (click)="onCancelForgetPassword()">Cancel</button></div>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
