--- a/my-dream-app/src/styles.css
+++ b/my-dream-app/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .body-color {
-    background-color: #FBFBFB;
+    background-color:rgba(223, 223, 223, 1);
 }
 
 .mt-10 {
