Ui Changes for body style

--- a/my-dream-app/src/app/app.component.html
+++ b/my-dream-app/src/app/app.component.html
@@ -1,16 +1,10 @@
-<!-- Menu Component -->
-<app-menu></app-menu>
+  <!-- Menu Component -->
+  <app-menu></app-menu>
 <div class="container-fluid">
-  <div class="row mt-10">
-      <!-- Login Component   -->
-      <app-login></app-login>
-   </div>
-
-</div>
-
-
-
-
-
-
-  
+    <div class="body-content">
+        <div class="row">
+            <!-- Login Component   -->
+            <app-login></app-login>
+          </div>
+    </div>
+</div>  
