Teacher UI Created

--- a/my-dream-app/src/app/app.component.html
+++ b/my-dream-app/src/app/app.component.html
@@ -3,6 +3,8 @@
 <div class="container-fluid">
   <div class="body-content">
     <!-- Login Component   -->
-    <app-login></app-login>
+    <!-- <app-login></app-login> -->
+
+    <app-createteacher></app-createteacher>
   </div>
 </div>
