Added Father MOther details

--- a/my-dream-app/src/app/Teacher/createteacher.component.html
+++ b/my-dream-app/src/app/Teacher/createteacher.component.html
@@ -1,7 +1,7 @@
 <div class="row card-style-main">
-  <h4 class="main-title">Create Teacher Details</h4>
+  <h4 class="main-title">Create Teacher</h4>
   <div class="odd-card">
-    <h4 class="card-title">Personal Details</h4>
+    <h4 class="card-title">Personal Information</h4>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="form-group">
@@ -28,9 +28,61 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Father Last Name
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Father First Name
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Father Middle Name
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Mother Last Name
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Mother First Name
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Mother Middle Name
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+        </div>
+      </div>
+    </div>
   </div>
   <div class="odd-card">
-    <h4 class="card-title">Address Details</h4>
+    <h4 class="card-title">Address Information</h4>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="form-group">
@@ -84,43 +136,53 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email Id
-              <sup>*</sup>
-            </label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Contact Number
-              <sup>*</sup>
-            </label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-          </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email Id
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
         </div>
       </div>
-  </div>
-  <div class="odd-card">
-      <h4 class="card-title">Course Details</h4>
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Select Course
-              <sup>*</sup>
-            </label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Select Sub-Course
-              <sup>*</sup>
-            </label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-          </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Contact Number
+            <sup>*</sup>
+          </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
         </div>
       </div>
     </div>
+  </div>
+  <div class="odd-card">
+    <h4 class="card-title">Course Information</h4>
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Select Course
+            <sup>*</sup>
+          </label>
+          <select class="form-control form-field">
+            <option value="volvo">Vocal</option>
+            <option value="saab">Instrumental</option>
+            <option value="mercedes">Dance</option>
+            <option value="audi">Drawing</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Select Sub-Course
+            <sup>*</sup>
+          </label>
+          <select class="form-control form-field">
+            <option value="volvo">Hindustani Classical Music</option>
+            <option value="saab">Bollywood Music</option>
+            <option value="mercedes">Bhajan and Ghazal</option>
+            <option value="audi">Rabindra Sangeet</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
