UI Changes for Teacher Create

--- a/my-dream-app/src/app/Teacher/createteacher.component.html
+++ b/my-dream-app/src/app/Teacher/createteacher.component.html
@@ -8,7 +8,7 @@
           <label for="exampleInputEmail1">Last Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Last Name">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -16,7 +16,7 @@
           <label for="exampleInputEmail1">First Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="First Name">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -24,7 +24,7 @@
           <label for="exampleInputEmail1">Middle Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Middle Name">
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
           <label for="exampleInputEmail1">Father Last Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father Last Name">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -42,7 +42,7 @@
           <label for="exampleInputEmail1">Father First Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father First Name">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -50,7 +50,7 @@
           <label for="exampleInputEmail1">Father Middle Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father Middle Name">
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
           <label for="exampleInputEmail1">Mother Last Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother Last Name">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -68,7 +68,7 @@
           <label for="exampleInputEmail1">Mother First Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother First Name">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -76,7 +76,7 @@
           <label for="exampleInputEmail1">Mother Middle Name
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother Middle Name">
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           <label for="exampleInputEmail1">Address Line1
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adress Line1">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -97,7 +97,7 @@
           <label for="exampleInputEmail1">Address Line2
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Address Line2">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -105,7 +105,7 @@
           <label for="exampleInputEmail1">Landmark
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Landmark">
         </div>
       </div>
     </div>
@@ -115,7 +115,7 @@
           <label for="exampleInputEmail1">City
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="City">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -123,7 +123,7 @@
           <label for="exampleInputEmail1">State
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="State">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -131,7 +131,7 @@
           <label for="exampleInputEmail1">PIN Code
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="PIN Code">
         </div>
       </div>
     </div>
@@ -141,7 +141,7 @@
           <label for="exampleInputEmail1">Email Id
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Id">
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
@@ -149,12 +149,12 @@
           <label for="exampleInputEmail1">Contact Number
             <sup>*</sup>
           </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Contact Number">
         </div>
       </div>
     </div>
   </div>
-  <div class="odd-card">
+  <!-- <div class="odd-card">
     <h4 class="card-title">Course Information</h4>
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-6">
@@ -184,5 +184,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
