--- a/my-dream-app/src/app/Teacher/createteacher.component.html
+++ b/my-dream-app/src/app/Teacher/createteacher.component.html
@@ -185,4 +185,21 @@
       </div>
     </div>
   </div> -->
+
+  <div class="form-group text-right">
+    <button class="btn btn-primary btn-space">Save</button>
+    <button class="btn btn-primary btn-space">Reset</button>
+</div>
+
+  <!-- <div class="odd-card">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="form-group text-right">
+            <button class="btn btn-primary">Save</button>
+            <button class="btn btn-primary">Reset</button>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
 </div>
