Arranged in folder

--- a/my-dream-app/src/app/Menu/menu.component.html
+++ b/my-dream-app/src/app/Menu/menu.component.html
@@ -7,14 +7,14 @@
       <li class="active"><a href="#">Home</a></li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Create Course</a></li>
-          <li><a href="#">Create Teacher</a></li>
-          <li><a href="#">Setup Fees</a></li>
+          <li><a href="#">Course Management</a></li>
+          <li><a href="#">Teacher Management</a></li>
+          <li><a href="#">Fees Management</a></li>
         </ul>
       </li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Student<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Create Student</a></li>
+          <li><a href="#">Student Management</a></li>
           <li><a href="#">Fees Collection</a></li>
           <li><a href="#">Student Attendece</a></li>
           <li><a href="#">Teacher Attendece</a></li>
