Seach Teacher Component

--- a/my-dream-app/src/app/Teacher/searchteacher/searchteacher.component.html
+++ b/my-dream-app/src/app/Teacher/searchteacher/searchteacher.component.html
@@ -1,3 +1,33 @@
-<p>
-  searchteacher works!
-</p>
+<div class="row card-style-main">
+  <h4 class="main-title">Teacher Management</h4>
+  <div class="odd-card">
+    <div class="panel-group mb-0">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a href="#">
+              Search Teacher
+            </a>
+          </h4>
+        </div>
+
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="form-group mb-0">
+                <label for="AccountName" class="form-label">Search by Name or Teacher Id</label>
+                <input type="text" placeholder="Search by Name or Teacher Id" id="AccountName" class="form-control form-field" />
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="btn-wrap pb-0 mt-24">
+                <button class="btn btn-primary"><i class="fa fa-search"></i>Search</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
