--- a/my-dream-app/src/app/Teacher/createteacher/createteacher.component.html
+++ b/my-dream-app/src/app/Teacher/createteacher/createteacher.component.html
@@ -1,155 +1,181 @@
 <div class="row card-style-main">
   <h4 class="main-title">Create Teacher</h4>
   <div class="odd-card">
-    <h4 class="card-title">Personal Information</h4>
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Last Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Last Name">
+    <div class="panel-group mb-0">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a href="#">
+              Personal Information
+            </a>
+          </h4>
         </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">First Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="First Name">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Middle Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Middle Name">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Father Last Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father Last Name">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Father First Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father First Name">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Father Middle Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father Middle Name">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Mother Last Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother Last Name">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Mother First Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother First Name">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Mother Middle Name
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother Middle Name">
+
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Last Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Last Name">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">First Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="First Name">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Middle Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Middle Name">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Father Last Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father Last Name">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Father First Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father First Name">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Father Middle Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Father Middle Name">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Mother Last Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother Last Name">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Mother First Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother First Name">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Mother Middle Name
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Mother Middle Name">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="odd-card">
-    <h4 class="card-title">Address Information</h4>
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Address Line1
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adress Line1">
+    <div class="panel-group mb-0">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a href="#">
+              Address Information
+            </a>
+          </h4>
         </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Address Line2
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Address Line2">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Landmark
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Landmark">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">City
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="City">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">State
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="State">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">PIN Code
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="PIN Code">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email Id
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Id">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Contact Number
-            <sup>*</sup>
-          </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Contact Number">
+
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Address Line1
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adress Line1">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Address Line2
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Address Line2">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Landmark
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Landmark">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">City
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="City">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">State
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="State">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">PIN Code
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="PIN Code">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email Id
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Id">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Contact Number
+                  <sup>*</sup>
+                </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Contact Number">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
