--- a/my-dream-app/src/app/app.component.html
+++ b/my-dream-app/src/app/app.component.html
@@ -5,7 +5,7 @@
     <!-- Login Component   -->
     <!-- <app-login></app-login> -->
 
-    <!-- <app-createteacher></app-createteacher> -->
-    <app-searchteacher></app-searchteacher>
+    <app-createteacher></app-createteacher>
+    <!-- <app-searchteacher></app-searchteacher> -->
   </div>
 </div>
