--- a/my-dream-app/src/styles.css
+++ b/my-dream-app/src/styles.css
@@ -35,6 +35,7 @@
 /* Card Style - Outer Card */
 .card-style-main {
     padding: 20px;
+    padding-bottom: 0px;
     margin-bottom: 2 0px;
     background-color:#fff;
     background: #fff;
@@ -86,7 +87,7 @@ sup {
 
     .panel-group .panel-heading {
         padding: 10px 15px;
-        background: #8e9996;
+        background: #bbc8c5;
     }
 
         .panel-group .panel-heading .panel-title {
@@ -102,7 +103,7 @@ sup {
         }      
 
     .panel-group .panel-body {
-        padding: 10px;
+        padding: 15px;
         padding-bottom: 8px;
     }
 
