--- a/my-dream-app/src/app/Menu/menu.component.html
+++ b/my-dream-app/src/app/Menu/menu.component.html
@@ -4,11 +4,12 @@
       <a class="navbar-brand" href="#">Sourav </a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a routerLink="/Dashboard">Home</a></li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin<span class="caret"></span></a>
         <ul class="dropdown-menu">
+          <li><a routerLink="/SerchTeacher">Teacher Management</a></li>
+          <li><a routerLink="/CreateTeacher">Create Teacher</a></li>
           <li><a href="#">Course Management</a></li>
-          <li><a href="#">Teacher Management</a></li>
           <li><a href="#">Fees Management</a></li>
         </ul>
       </li>
