--- a/my-dream-app/src/app/app.component.html
+++ b/my-dream-app/src/app/app.component.html
@@ -5,7 +5,11 @@
     <!-- Login Component   -->
     <!-- <app-login></app-login> -->
 
-    <app-createteacher></app-createteacher>
+    <!-- <app-createteacher></app-createteacher> -->
     <!-- <app-searchteacher></app-searchteacher> -->
+    <!-- <app-dashboard></app-dashboard> -->
+    <article>
+      <router-outlet></router-outlet>
+  </article>
   </div>
 </div>
