--- a/my-dream-app/src/app/Login/login.component.html
+++ b/my-dream-app/src/app/Login/login.component.html
@@ -1,34 +1,70 @@
-<div class="col-sm-12 text-left">
-    <div class="row">
-        <div class="col-sm-4 card-style-1">
-            <div *ngIf="showLoginDiv"> 
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">User Name</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-2"><button type="submit" class="btn btn-primary">Submit</button></div>
-                        <div class="col-sm-4 mt-8"><a href="#" (click)="onClickForgetPassword()">Forget Password</a></div>
-                    </div>
-
-                </form>
-            </div>
-            <div  *ngIf="showForgetPasswordDiv">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Enter Email Address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Enter email address">
+<div class="row card-style-main">
+    <h4 class="main-title">User Login</h4>
+    <div class="odd-card">
+      <div class="panel-group mb-0">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a href="#">
+                Login Information
+              </a>
+            </h4>
+          </div>
+  
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="form-group mb-0">
+                  <label for="AccountName" class="form-label">User Name</label>
+                  <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
                 </div>
-                <div class="row">
-                    <div class="col-sm-2"><button type="submit" class="btn btn-primary">Send</button></div>
-                    <div class="col-sm-3"><button type="submit" class="btn btn-primary" (click)="onCancelForgetPassword()">Cancel</button></div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="form-group mb-0">
+                  <label for="AccountName" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
-
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="btn-wrap pb-0 mt-24">
+                  <button class="btn btn-primary"><i class="fa fa-search"></i>Search</button>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+
+    <!-- Forget Password -->
+    <div class="odd-card">
+        <div class="panel-group mb-0">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a href="#">
+                  Forget Password
+                </a>
+              </h4>
+            </div>
+    
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                  <div class="form-group mb-0">
+                    <label for="AccountName" class="form-label">Email</label>
+                    <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                  <div class="btn-wrap pb-0 mt-24">
+                    <button class="btn btn-primary"><i class="fa fa-search"></i>Send</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+  </div>
