--- a/my-dream-app/src/app/Menu/menu.component.html
+++ b/my-dream-app/src/app/Menu/menu.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="#">Sourav </a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a routerLink="/Dashboard">Home</a></li>
+      <li class="active"><a routerLink="/Dashboard">Dashboard</a></li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a routerLink="/SerchTeacher">Teacher Management</a></li>
@@ -29,7 +29,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a routerLink="/Login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
   </div>
 </nav>
