--- a/my-dream-app/src/app/Login/login.component.html
+++ b/my-dream-app/src/app/Login/login.component.html
@@ -1,70 +1,125 @@
 <div class="row card-style-main">
-    <h4 class="main-title">User Login</h4>
-    <div class="odd-card">
-      <div class="panel-group mb-0">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a href="#">
-                Login Information
-              </a>
-            </h4>
-          </div>
-  
-          <div class="panel-body">
-            <div class="row">
-              <div class="col-lg-4 col-md-4 col-sm-4">
-                <div class="form-group mb-0">
-                  <label for="AccountName" class="form-label">User Name</label>
-                  <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
-                </div>
+  <h4 class="main-title">User Login</h4>
+  <div class="odd-card">
+    <div class="panel-group mb-0">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a href="#">
+              Login Information
+            </a>
+          </h4>
+        </div>
+
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group mb-0">
+                <label for="AccountName">User Name
+                  <sup>*</sup>
+                </label>
+                <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4">
-                <div class="form-group mb-0">
-                  <label for="AccountName" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group mb-0">
+                <label for="AccountName">Password
+                  <sup>*</sup>
+                </label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4">
-                <div class="btn-wrap pb-0 mt-24">
-                  <button class="btn btn-primary"><i class="fa fa-search"></i>Search</button>
-                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="btn-wrap pb-0 mt-24">
+                <button class="btn btn-primary"><i class="fa fa-search"></i>Search</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Forget Password -->
-    <div class="odd-card">
-        <div class="panel-group mb-0">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                <a href="#">
-                  Forget Password
-                </a>
-              </h4>
+  <!-- Forget Password Component -->
+  <div class="odd-card">
+    <div class="panel-group mb-0">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a href="#">
+              Forget Password
+            </a>
+          </h4>
+        </div>
+
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="form-group mb-0">
+                <label for="AccountName">Email
+                  <sup>*</sup>
+                </label>
+                <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
+              </div>
             </div>
-    
-            <div class="panel-body">
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <div class="form-group mb-0">
-                    <label for="AccountName" class="form-label">Email</label>
-                    <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <div class="btn-wrap pb-0 mt-24">
-                    <button class="btn btn-primary"><i class="fa fa-search"></i>Send</button>
-                  </div>
-                </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="btn-wrap pb-0 mt-24">
+                <button class="btn btn-primary"><i class="fa fa-search"></i>Send</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-  
+    </div>
   </div>
+
+   <!-- Change Password Component -->
+   <div class="odd-card">
+    <div class="panel-group mb-0">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a href="#">
+              Change Password
+            </a>
+          </h4>
+        </div>
+
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3">
+              <div class="form-group mb-0">
+                <label for="AccountName" class="form-label">Old Password
+                  <sup>*</sup>
+                </label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Old Password">
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3">
+              <div class="form-group mb-0">
+                <label for="AccountName" class="form-label">New Password
+                  <sup>*</sup>
+                </label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3">
+              <div class="form-group mb-0">
+                <label for="AccountName">Re-enter Password
+                  <sup>*</sup>
+                </label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter Password">
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3">
+              <div class="btn-wrap pb-0 mt-24">
+                <button class="btn btn-primary"><i class="fa fa-search"></i>Change Password</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
